# watchDir-bug

./: README.md  watch-dir.cabal
src/: Main.hs
src/Data/: Foo.hs
