name:                watch-dir
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/watch-dir#readme
license:             BSD3
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable watch-dir
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Data.Foo
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
